added new opens package name for application