@@ -95,6 +95,7 @@ application {
                                  "--add-opens", "javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED",
                                  "--add-opens", "javafx.graphics/javafx.stage=ALL-UNNAMED",
                                  "--add-opens", "javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED",
+                                 "--add-opens", "javafx.graphics/com.sun.javafx.application=ALL-UNNAMED",
                                  "--add-opens", "javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"]
 }
 
